fixed issue with overflow

--- a/single-price-grid-component-main/public/assets/styles/global.css
+++ b/single-price-grid-component-main/public/assets/styles/global.css
@@ -139,7 +139,6 @@ main {
   main {
     display: block;
     margin-inline: 15px;
-    overflow: visible;
   }
   #community h1 {
     font-size: 1.35rem;
