--- a/single-price-grid-component-main/src/utilities/_media-query.less
+++ b/single-price-grid-component-main/src/utilities/_media-query.less
@@ -3,7 +3,6 @@
     main {
         display: block;
         margin-inline: 15px;
-        overflow: visible;
     }
 
     #community {
